// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emotion primitives primitive should work with \`withComponent\` 1`] = `
<div
  className="emotion-0 rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb emotion-1 rn-boxSizing-deolkf rn-color-k9pu7p rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi emotion-2 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi emotion-3 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j emotion-4 emotion-5 emotion-6 rn-wordWrap-qvutc0"
  dir="auto"
>
  Mike
</div>
`;

exports[`Emotion primitives should render <Image /> 1`] = `
<div
  className="emotion-0 rn-backgroundColor-wib322 rn-backgroundPosition-vvn4in emotion-1 emotion-2 emotion-3 emotion-4 emotion-5 emotion-6 emotion-7 emotion-8 emotion-9 emotion-10 emotion-11 emotion-12 emotion-13 emotion-14 rn-boxSizing-deolkf rn-display-6koalj emotion-15 emotion-16 emotion-17 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi emotion-18 emotion-19 rn-minWidth-bcqeeo rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j emotion-20 rn-position-bnwqim emotion-21"
/>
`;

exports[`Emotion primitives should render primitive with style prop 1`] = `
<div
  className="emotion-0 rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb emotion-1 rn-boxSizing-deolkf rn-color-k9pu7p rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi emotion-2 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi emotion-3 emotion-4 emotion-5 rn-wordWrap-qvutc0"
  dir="auto"
  style={
    Object {
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
>
  Emotion primitives
</div>
`;

exports[`Emotion primitives should render the primitive on changing the props 1`] = `
<div
  className="emotion-0 rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb emotion-1 rn-boxSizing-deolkf rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi emotion-2 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi emotion-3 rn-paddingTop-1knelpx rn-paddingRight-1ah4tor rn-paddingBottom-k8qxaj emotion-4 emotion-5 emotion-6 rn-wordWrap-qvutc0"
  dir="auto"
  style={
    Object {
      "color": "hotpink",
    }
  }
>
  Emotion Primitives
</div>
`;

exports[`Emotion primitives should render the primitive when styles applied using object style notation 1`] = `
<div
  className="rn-backgroundColor-1mjtqww emotion-0 rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb emotion-1 rn-boxSizing-deolkf emotion-2 rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi emotion-3 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j emotion-4 emotion-5 emotion-6 rn-wordWrap-qvutc0"
  dir="auto"
  style={
    Object {
      "fontSize": "40px",
    }
  }
>
  Emotion Primitives
</div>
`;

exports[`Emotion primitives should style any other component 1`] = `
<div
  className="emotion-0 rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb emotion-1 rn-boxSizing-deolkf rn-color-k9pu7p rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi emotion-2 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi emotion-3 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j emotion-4 emotion-5 emotion-6 rn-wordWrap-qvutc0"
  dir="auto"
>
  Hello World
</div>
`;

exports[`Emotion primitives should work with emotion-theming 1`] = `
<div
  className="emotion-0 rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb emotion-1 rn-boxSizing-deolkf rn-color-ar5qwb rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi emotion-2 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi emotion-3 rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j emotion-4 emotion-5 emotion-6 rn-wordWrap-qvutc0"
  dir="auto"
>
  Hello World
</div>
`;
